<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_transactions" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_products" />

        <item
            android:id="@+id/nav_stocks"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_stocks" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_reports" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="Lainnya">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/nav_akun"
                android:title="Akun" />
        </menu>
    </item>

</menu>
